altering category language

--- a/emissionsnb.ipynb
+++ b/emissionsnb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,16 +197,18 @@
     "    'Fertilizer & Animals': 'Fertilizer',\n",
     "    'Co-gen steam': 'Co-gen Plant',\n",
     "    'Direct Transportation': 'University Fleet',\n",
-    "    'Other On-Campus Stationary': 'Gas Heating',\n",
+    "    'Other On-Campus Stationary': 'Propane & Natural Gas',\n",
     "    'Directly Financed Air Travel': 'Air Travel',\n",
+    "    'Solid Waste': 'Landfill Waste',\n",
     "    'Other Directly Financed Travel': 'Bus Travel'\n",
     "})\n",
     "cleaned_normalized['Source'] = cleaned_normalized['Source'].replace({\n",
     "    'Fertilizer & Animals': 'Fertilizer',\n",
     "    'Co-gen steam': 'Co-gen Plant',\n",
     "    'Direct Transportation': 'University Fleet',\n",
-    "    'Other On-Campus Stationary': 'Gas Heating',\n",
+    "    'Other On-Campus Stationary': 'Propane & Natural Gas',\n",
     "    'Directly Financed Air Travel': 'Air Travel',\n",
+    "    'Solid Waste': 'Landfill Waste',\n",
     "    'Other Directly Financed Travel': 'Bus Travel'\n",
     "})\n",
     "\n",
