--- a/emissionsnb.ipynb
+++ b/emissionsnb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,13 @@
     "import plotly.express as px\n",
     "\n",
     "# Load the data\n",
-    "customized_report = pd.read_csv('data/base_data_15-23.csv')\n",
-    "normalized_data = pd.read_csv('data/base_data_normalized.csv')"
+    "customized_report = pd.read_csv('total.csv')\n",
+    "normalized_data = pd.read_csv('per_student.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,27 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "customized_report.to_csv('cleaned_totals.csv', index=False)\n",
-    "normalized_data.to_csv('cleaned_normalized.csv', index=False)\n"
+    "cleaned_totals = customized_report\n",
+    "cleaned_normalized = normalized_data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cleaned_totals = pd.read_csv('cleaned_totals.csv')\n",
-    "cleaned_normalized = pd.read_csv('cleaned_normalized.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,10 +201,20 @@
     "    'Solid Waste': 'Landfill Waste',\n",
     "    'Other Directly Financed Travel': 'Bus Travel'\n",
     "})\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a DataFrame with unique sources\n",
+    "sources_df = pd.DataFrame(sorted_sources, columns=['Source'])\n",
     "\n",
-    "# Save the updated dataframes to csv files\n",
-    "cleaned_totals.to_csv('data/cleaned_totals.csv', index=False)\n",
-    "cleaned_normalized.to_csv('data/cleaned_normalized.csv', index=False)\n"
+    "# Save the DataFrame to a csv file\n",
+    "sources_df.to_csv('blurbs.csv', index=False)\n"
    ]
   }
  ],
