adding readme and removing junk files

--- a/emissionsnb.ipynb
+++ b/emissionsnb.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook contains code for creating static charts from simap output"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +21,14 @@
     "\n",
     "\n",
     "# Load the data\n",
-    "customized_report = pd.read_csv('total.csv')\n",
-    "normalized_data = pd.read_csv('per_student.csv')\n",
+    "cleaned_totals = pd.read_csv('total.csv')\n",
+    "per_student = pd.read_csv('per_student.csv')\n",
     "per_sqft = pd.read_csv('per_sqft.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,53 +37,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "customized_report = customized_report[['Fiscal Year', 'Scope', 'Source', main_unit]]\n",
-    "normalized_data = normalized_data[['Fiscal Year', 'Scope', 'Source', main_unit]]\n",
+    "cleaned_totals = cleaned_totals[['Fiscal Year', 'Scope', 'Source', main_unit]]\n",
+    "per_student = per_student[['Fiscal Year', 'Scope', 'Source', main_unit]]\n",
     "per_sqft = per_sqft[['Fiscal Year', 'Scope', 'Source', main_unit]]\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "object\n",
-      "float64\n"
-     ]
-    }
-   ],
    "source": [
-    "print(customized_report[main_unit].dtype)\n",
-    "print(normalized_data[main_unit].dtypes)\n",
+    "Change the data to floats as needed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if cleaned_totals[main_unit].dtype == object:\n",
+    "    cleaned_totals[main_unit] = cleaned_totals[main_unit].str.replace(',', '').astype(float)\n",
+    "if per_student[main_unit].dtype == object:\n",
+    "    per_student[main_unit] = per_student[main_unit].str.replace(',', '').astype(float)\n",
+    "if per_sqft[main_unit].dtype == object:\n",
+    "    per_sqft[main_unit] = per_sqft[main_unit].str.replace(',', '').astype(float)\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "customized_report[main_unit] = customized_report[main_unit].str.replace(',', '').astype(float)\n"
+    "Choosing to group together go-gen plant sources and commuting sources, just to make the visualizations simpler and easier to interpret"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Combine all sources with 'commuting' in their name into a single source named 'Commuting'\n",
-    "customized_report['Source'] = customized_report['Source'].apply(lambda x: 'Commuting' if 'commuting' in x.lower() else x)\n",
-    "normalized_data['Source'] = normalized_data['Source'].apply(lambda x: 'Commuting' if 'commuting' in x.lower() else x)\n",
+    "cleaned_totals['Source'] = cleaned_totals['Source'].apply(lambda x: 'Commuting' if 'commuting' in x.lower() else x)\n",
+    "per_student['Source'] = per_student['Source'].apply(lambda x: 'Commuting' if 'commuting' in x.lower() else x)\n",
     "per_sqft['Source'] = per_sqft['Source'].apply(lambda x: 'Commuting' if 'commuting' in x.lower() else x)\n",
     "\n",
     "# Combine all sources with 'co-gen' in their name into a single source named 'Co-gen Plant'\n",
@@ -88,37 +98,27 @@
     "    else:\n",
     "        return source\n",
     "\n",
-    "customized_report['Source'] = customized_report['Source'].apply(combine_sources)\n",
-    "normalized_data['Source'] = normalized_data['Source'].apply(combine_sources)\n",
+    "cleaned_totals['Source'] = cleaned_totals['Source'].apply(combine_sources)\n",
+    "per_student['Source'] = per_student['Source'].apply(combine_sources)\n",
     "per_sqft['Source'] = per_sqft['Source'].apply(combine_sources)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sum up the 'Commuting' rows for each year\n",
-    "customized_report = customized_report.groupby(['Fiscal Year', 'Scope', 'Source'], as_index=False)[main_unit].sum()\n",
-    "normalized_data = normalized_data.groupby(['Fiscal Year', 'Scope', 'Source'], as_index=False)[main_unit].sum()\n",
+    "# Sum up the renamed rows for each year, anything with the same name will be summed into single sources\n",
+    "cleaned_totals = cleaned_totals.groupby(['Fiscal Year', 'Scope', 'Source'], as_index=False)[main_unit].sum()\n",
+    "per_student = per_student.groupby(['Fiscal Year', 'Scope', 'Source'], as_index=False)[main_unit].sum()\n",
     "per_sqft = per_sqft.groupby(['Fiscal Year', 'Scope', 'Source'], as_index=False)[main_unit].sum()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cleaned_totals = customized_report\n",
-    "cleaned_normalized = normalized_data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
     "    'Solid Waste': 'Landfill Waste',\n",
     "    'Other Directly Financed Travel': 'Bus Travel'\n",
     "})\n",
-    "cleaned_normalized['Source'] = cleaned_normalized['Source'].replace({\n",
+    "per_student['Source'] = per_student['Source'].replace({\n",
     "    'Fertilizer & Animals': 'Fertilizer',\n",
     "    'Co-gen steam': 'Co-gen Plant',\n",
     "    'Direct Transportation': 'University Fleet',\n",
@@ -171,13 +171,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating csvs for use in producing static graphs and dashboard:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the cleaned_normalized dataframe to a csv file\n",
-    "cleaned_normalized.to_csv('static_cleaned_normalized.csv', index=False)\n",
+    "# Save the per_student dataframe to a csv file\n",
+    "per_student.to_csv('static_per_student.csv', index=False)\n",
     "\n",
     "# Save the cleaned_totals dataframe to a csv file\n",
     "cleaned_totals.to_csv('static_cleaned_totals.csv', index=False)\n",
@@ -192,12 +200,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data is now in its simplified form"
+    "Data is now in its simplified form run from here for use in producing static charts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -215,8 +223,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Read the cleaned_normalized dataframe from a csv file\n",
-    "cleaned_normalized = pd.read_csv('static_cleaned_normalized.csv')\n",
+    "# Read the per_student dataframe from a csv file\n",
+    "per_student = pd.read_csv('static_per_student.csv')\n",
     "\n",
     "# Read the cleaned_totals dataframe from a csv file\n",
     "cleaned_totals = pd.read_csv('static_cleaned_totals.csv')\n",
@@ -233,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1278,8 +1286,8 @@
     "# Define color mapping for scopes\n",
     "color_mapping = {\n",
     "    1: '#73B7ED',  # blue\n",
-    "    2: '#0068C9',  # green\n",
-    "    3: '#FFABAB'   # red\n",
+    "    2: '#0068C9',  # light blue\n",
+    "    3: '#FFABAB'   # reddish\n",
     "}\n",
     "\n",
     "# Create an area chart for the total over time, grouped by scope\n",
@@ -1314,12 +1322,12 @@
     "# Show the plot\n",
     "total_emissions_over_time.show()\n",
     "\n",
-    "pio.write_image(total_emissions_over_time, 'byscope.png', width=800, height=600, scale=2)"
+    "#pio.write_image(total_emissions_over_time, 'byscope.png', width=800, height=600, scale=2)  #render the chart in hd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2291,12 +2299,12 @@
     "\n",
     "# Show the plot\n",
     "fig.show()\n",
-    "pio.write_image(fig, 'source overview.png', width=800, height=600, scale=2)"
+    "#pio.write_image(fig, 'source overview.png', width=800, height=600, scale=2) #render the chart in hd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -3235,10 +3243,10 @@
    ],
    "source": [
     "# Filter data for 'Scope 3'\n",
-    "scope3_normalized_data = cleaned_normalized[cleaned_normalized['Scope'] == 3]\n",
+    "scope3_per_student = per_student[per_student['Scope'] == 3]\n",
     "\n",
     "# Group by 'Fiscal Year' and sum 'GHG MTCDE'\n",
-    "year_scope3_totals = scope3_normalized_data.groupby('Fiscal Year')['GHG MTCDE'].sum().reset_index()\n",
+    "year_scope3_totals = scope3_per_student.groupby('Fiscal Year')['GHG MTCDE'].sum().reset_index()\n",
     "\n",
     "# Define color mapping for scopes\n",
     "color_mapping = {\n",
@@ -3286,12 +3294,12 @@
     "\n",
     "# Show the plot\n",
     "scope3_emissions_over_time.show()\n",
-    "pio.write_image(scope3_emissions_over_time, 'scope3.png', width=800, height=600, scale=2)"
+    "#pio.write_image(scope3_emissions_over_time, 'scope3.png', width=800, height=600, scale=2)  #render the chart in hd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -4318,12 +4326,12 @@
     "\n",
     "# Show the plot\n",
     "fig.show()\n",
-    "pio.write_image(fig, 'air travel.png', width=1200, height=900, scale=2)"
+    "#pio.write_image(fig, 'air travel.png', width=1200, height=900, scale=2)  #render the chart in hd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -5283,12 +5291,12 @@
     "\n",
     "# Show the plot\n",
     "commuting_emissions_over_time.show()\n",
-    "pio.write_image(commuting_emissions_over_time, 'commuting.png', width=1600, height=1200, scale=2)"
+    "#pio.write_image(commuting_emissions_over_time, 'commuting.png', width=1600, height=1200, scale=2) #render the chart in hd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -5319,7 +5327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -6285,7 +6293,7 @@
     "fig.show()\n",
     "\n",
     "# Save the figure as a PNG image\n",
-    "pio.write_image(fig, 'figure.png', width=800, height=600, scale=2)"
+    "#pio.write_image(fig, 'figure.png', width=800, height=600, scale=2)  #render the chart in hd"
    ]
   }
  ],
